# loophole-insurance

./: .gitignore  README.md  config.yaml  pyproject.toml
loophole/: llm.py  main.py  models.py  prompts.py  session.py  template_browser.py  visualize.py
loophole/agents/: drafter.py  gap_finder.py  judge.py  overreach_finder.py
templates/endorsements/: standard_endorsement.txt
templates/guidelines/: drafting_guidelines.txt
templates/policies/: cyber_policy_excerpt.txt
