[project]
name = "loophole"
version = "0.1.0"
description = "Adversarial insurance endorsement drafter — stress-test policy endorsements through adversarial AI agents"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.9",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
loophole = "loophole.main:app"
